# jas

./: .gitignore  CIF.cpp  CIF.h  CMakeLists.txt  ConsoleLogger.h  EvalContext.h  EvalContextBase.cpp  EvalContextBase.h  EvalContextIF.h  Evaluable.h  EvaluableClasses.h  Exception.h  HistoricalEvalContext.cpp  Invocable.cpp  Invocable.h  JEvalContext.cpp  JEvalContext.h  Json.h  Keywords.h  Parser.cpp  Parser.h  String.h  SupportedFunctions.h  SyntaxEvaluator.cpp  SyntaxEvaluator.h  SyntaxValidator.cpp  SyntaxValidator.h  jaop.h  jas_evaluables.h  jas_exception.h  jas_parser.h  jas_result_evaluator.h  jas_string.h  jas_syntax_generator.h  json_parser.boost.spirit.cpp  main.cpp  pch.cmake  readme.html  readme.md  test.cpp
3rd/axzdict/: CMakeLists.txt  axz_dict.cpp  axz_dict.h  axz_error_codes.h  axz_json.h
3rd/json11/: JsonTrait.h
include/jas/: BasicEvalContext.h  CIF.h  ConsoleLogger.h  EvalContextIF.h  EvalContextStandard.h  Evaluable.h  EvaluableClasses.h  EvaluableClassesFwd.h  EvaluatedValue.h  Exception.h  FunctionModule.h  FunctionModuleBaseT.h  HistoricalEvalContext.h  JASFacade.h  Json.h  Keywords.h  Module.CIF.h  ModuleManager.h  Number.h  ObjectPath.h  OpTraits.h  Parser.h  Path.h  String.h  SyntaxEvaluator.h  SyntaxEvaluatorImpl.h  SyntaxValidator.h  TranslatedJASSerializer.h  Translator.h  TypesName.h  Var.h  Version.h
include/jas/json_trait/axzdict/: JsonTrait.h
include/jas/json_trait/boost/: JsonTrait.h
include/jas/json_trait/json11/: JsonTrait.h
include/jas/json_trait/nlohmann/: JsonTrait.h
json_trait/axzdict/: JsonTrait.h  axz_dict.cpp  axz_dict_stepper.h  axz_export.h  axz_json.cpp  axz_json.h  axz_types.h
json_trait/json11/: CMakeLists.txt  JsonTrait.h
json_trait/nlohmann/: JsonTrait.h
soh_eval/: CMakeLists.txt  SOHEvaluator.cpp  SOHEvaluator.h  main.cpp
src/: BasicEvalContext.cpp  Builtin.FIEDelegator.h  Builtin.ListOps.cpp  Builtin.ListOps.h  CIF.cpp  EvalContextBase.cpp  EvalContextStandard.cpp  EvaluatedValue.cpp  FunctionModule.cpp  HistoricalEvalContext.cpp  JASFacade.cpp  Module.Alg.cpp  Module.CIF.cpp  Module.Dict.cpp  Module.List.cpp  ModuleManager.cpp  Number.cpp  Parser.cpp  SyntaxEvaluator.cpp  SyntaxEvaluatorImpl.cpp  SyntaxValidator.cpp  Translator.cpp  Var.cpp  VarManipModuleShared.h
src/details/: EvaluationFrame.h  EvaluationStack.cpp  EvaluationStack.h
test/: CMakeLists.txt  jas_test.cpp  jase.cpp  misc_test.cpp
test/data/: arithmetic.ni  comparison.ni  complex.ni  context_arg.hi  funcinvocation.hi  funcinvocation.ni  list_algrithms.hi  listop.hi  listop.ni  logical.ni  macro.hi  module.alg.ni  module.dict.ni  module.list.ni  type_specifier.ni  variable.hi  variable.ni
test/data/happy_cases/: arithmetic.ni  comparison.ni  complex.ni  context_collector.hi  funcinvocation.hi  funcinvocation.ni  history_listop.hi  listop.hi  logical.ni  shorthands.hi  type_specifier.ni  variable.ni
